# recommenders-service

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml
config/: application.yaml
config/services/: services.yaml
data/: mlflow.db
mlflow-web/: Dockerfile  requirements.txt
mlflow-web/scripts/: start.sh
service/: .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
service/config/: application.yaml
service/config/models/: models.yaml
service/config/services/: services.yaml
service/scripts/: run_locally.sh  start.sh
service/src/: __init__.py  api.py  config.py  logging.ini  models.py
service/src/repository/: nfc.py  services.py
service/src/routers/: __init__.py  nfc_router.py
