[tool.poetry]
name = "service"
version = "0.1.0"
description = "Servicing a Deep recomender"
authors = ["felipe mateos <felipe_mateos@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.91.0"
fastapi-utils = "^0.2.1"
uvicorn = "^0.20.0"
aioredis = "^2.0.1"
pydantic = "^1.10.4"
httpx = "^0.23.3"
mlflow-skinny = "^2.1.1"
numpy = "^1.24.2"
onnx = "^1.13.0"
onnxruntime = "^1.13.1"
pandas = "^1.5.3"
aiokafka = "^0.8.0"
python-dotenv = "^0.21.1"
boto3 = "^1.26.68"
hydra-core = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
