[tool.poetry]
name = "service"
version = "0.1.0"
description = "Servicing a Deep recomender"
authors = ["felipe mateos <felipe_mateos@hotmail.com>"]



# https://pypi.org/classifiers/                                                             
classifiers = [                                                                                 
"Development Status :: 4 - Beta",                                                           
"Environment :: Console",                                                                   
"Intended Audience :: Information Technology",                                              
"Programming Language :: Python :: 3.7",                                                    
"Programming Language :: Python :: 3.8",                                                    
"Programming Language :: Python :: 3.9",                                                    
"Programming Language :: Python :: 3.10",                                                   
"Topic :: Software Development",                                                       
 ] 


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.91.0"
fastapi-utils = "^0.2.1"
uvicorn = "^0.20.0"
aioredis = "^2.0.1"
pydantic = "^1.10.4"
httpx = "^0.23.3"
mlflow-skinny = "^2.1.1"
numpy = "^1.24.2"
onnx = "^1.13.0"
onnxruntime = "^1.13.1"
pandas = "^1.5.3"
aiokafka = "^0.8.0"
python-dotenv = "^0.21.1"
boto3 = "^1.26.68"
hydra-core = "^1.3.1"

[tool.poetry.dev-dependencies]
flake8 = "~4.0.1"                                                                           
isort = "~5.10.1"                                                                           
pylint = "~2.14.5"                                                                          
pytest = "~7.1.2"                                                                           
pytest-cov = "~3.0.0"                                                                       
unify = "~0.5"
mypy = "~0.971"       

[tool.poetry.dev-dependencies.black]                                                        
version = "~22.3"     
allow-prereleases = true 

[tool.black]
line-length = 140                                                                           
skip-string-normalization = true                                                            
target_version = ['py39', 'py38']  


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
